admin: add released date time list

--- a/Admin/efpt.config.json
+++ b/Admin/efpt.config.json
@@ -16,6 +16,10 @@
       {
          "Name": "[dbo].[Movies]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[ReleasedDateTimes]",
+         "ObjectType": 0
       }
    ],
    "UiHint": "(localdb)\\LocalDBDemo.MovieTicketBooking",
