--- a/Admin/Admin.csproj
+++ b/Admin/Admin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,12 +10,16 @@
   <ItemGroup>
     <Compile Remove="Data\**" />
     <Compile Remove="Views\Movie\**" />
+    <Compile Remove="Views\ReleasedDateTimes\**" />
     <Content Remove="Data\**" />
     <Content Remove="Views\Movie\**" />
+    <Content Remove="Views\ReleasedDateTimes\**" />
     <EmbeddedResource Remove="Data\**" />
     <EmbeddedResource Remove="Views\Movie\**" />
+    <EmbeddedResource Remove="Views\ReleasedDateTimes\**" />
     <None Remove="Data\**" />
     <None Remove="Views\Movie\**" />
+    <None Remove="Views\ReleasedDateTimes\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.3" />
