--- a/FrontEnd/efpt.config.json
+++ b/FrontEnd/efpt.config.json
@@ -20,6 +20,10 @@
       {
          "Name": "[dbo].[ReleasedDateTimes]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Seats]",
+         "ObjectType": 0
       }
    ],
    "UiHint": "(localdb)\\LocalDBDemo.MovieTicketBooking",
