front end: display movie, date, time at booking pg

--- a/FrontEnd/efpt.config.json
+++ b/FrontEnd/efpt.config.json
@@ -14,6 +14,30 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
+         "Name": "[dbo].[AspNetRoles]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserClaims]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserLogins]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserRoles]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUsers]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[BookedTickets]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Movies]",
          "ObjectType": 0
       },
