front end: create invoice

--- a/FrontEnd/efpt.config.json
+++ b/FrontEnd/efpt.config.json
@@ -34,7 +34,7 @@
          "ObjectType": 0
       },
       {
-         "Name": "[dbo].[BookedTickets]",
+         "Name": "[dbo].[Invoices]",
          "ObjectType": 0
       },
       {
