front end: rename from seat to room

--- a/FrontEnd/efpt.config.json
+++ b/FrontEnd/efpt.config.json
@@ -46,7 +46,7 @@
          "ObjectType": 0
       },
       {
-         "Name": "[dbo].[Seats]",
+         "Name": "[dbo].[Rooms]",
          "ObjectType": 0
       }
    ],
