admin: add to seating plan db

--- a/Admin/efpt.config.json
+++ b/Admin/efpt.config.json
@@ -14,11 +14,43 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
+         "Name": "[dbo].[AspNetRoles]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserClaims]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserLogins]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUserRoles]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[AspNetUsers]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Movies]",
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[Payments]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[ReleasedDateTimes]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Rooms]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[SeatingPlans]",
          "ObjectType": 0
       }
    ],
