front end: able to update occupied plan admin: when create released date time for each movie, auto create seating plan and occupied plan

--- a/FrontEnd/efpt.config.json
+++ b/FrontEnd/efpt.config.json
@@ -48,6 +48,10 @@
       {
          "Name": "[dbo].[Rooms]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[SeatingPlans]",
+         "ObjectType": 0
       }
    ],
    "UiHint": "(localdb)\\LocalDBDemo.MovieTicketBooking",
